# colbuilder

./: .README.md.swp  .gitignore  CITATION.bibtex  README.md  config.yaml  config_build_geometry_pyd.yaml  config_change_crosslink_density.yaml  diff  pyproject.toml  setup.cfg
docs/: configuration.md  data.md  data_dictionary.md  user_guide.md
docs/examples/example1/: Readme.md  config.yaml  config_ex1.yaml  homosapiens_alignment.fasta
docs/examples/example1- full_procedure/: Readme.md  config_ex1.yaml  connect_from_colbuilder.txt  crystalcontacts_from_colbuilder_opt.txt  output_terminal.txt
docs/examples/example1- full_procedure/homo_sapiens_topology_files/: col_12.itp  col_13.itp  col_14.itp  col_17.itp  col_2.itp  col_26.itp  col_28.itp  col_29.itp  col_3.itp  col_33.itp  col_34.itp  col_36.itp  col_41.itp  col_43.itp  col_46.itp  col_49.itp  col_54.itp  col_57.itp  col_58.itp  col_59.itp  col_9.itp  collagen_fibril_homo_sapiens.top  posre_23.itp  posre_26.itp  posre_29.itp  posre_39.itp  posre_47.itp  posre_55.itp  posre_58.itp
docs/examples/example1/homo_sapiens_topology_files/: col_0.itp  col_1.itp  col_11.itp  col_12.itp  col_13.itp  col_14.itp  col_17.itp  col_19.itp  col_23.itp  col_24.itp  col_25.itp  col_28.itp  col_29.itp  col_31.itp  col_33.itp  col_34.itp  col_36.itp  col_37.itp  col_38.itp  col_39.itp  col_41.itp  col_43.itp  col_44.itp  col_46.itp  col_47.itp  col_48.itp  col_5.itp  col_50.itp  col_51.itp  col_53.itp  col_54.itp  col_55.itp  col_57.itp  col_58.itp  col_6.itp  col_7.itp  col_73.itp  col_74.itp  col_79.itp  col_8.itp  (+3 more)
docs/examples/example2/: Readme.md  config.yaml  config_human-D.yaml  config_human-T.yaml  config_human_basic.yaml  config_mix.yaml  connect_from_colbuilder.txt  crystalcontacts_from_colbuilder.txt  crystalcontacts_from_colbuilder_opt_id.txt  example2.sh  output_terminal.txt
docs/examples/example3/: Readme.md  \  config_replace.yaml  output_terminal.txt
docs/examples/example3/NC/: temp_crosslinks.txt
docs/examples/example4/: Readme.md  config_20260213_105001.yaml  config_ex4.yaml
docs/examples/example4/rattus_norvegicus_topology_files_MIX/: col_0.itp  col_1.itp  col_11.itp  col_14.itp  col_17.itp  col_18.itp  col_19.itp  col_22.itp  col_23.itp  col_26.itp  col_27.itp  col_28.itp  col_29.itp  col_30.itp  col_33.itp  col_34.itp  col_35.itp  col_36.itp  col_39.itp  col_4.itp  col_40.itp  col_41.itp  col_42.itp  col_43.itp  col_44.itp  col_47.itp  col_48.itp  col_49.itp  col_5.itp  col_50.itp  col_51.itp  col_54.itp  col_57.itp  col_58.itp  col_59.itp  col_6.itp  col_60.itp  collagen_fibril_rattus_norvegicus.top  posre_24_25.itp  posre_27.itp  (+5 more)
docs/examples/example5/example5.1/: Readme.md  config_ex5_step1_enzymatic.yaml  config_ex5_step2_nonenzymatic.yaml  config_ex5_step3.yaml
docs/examples/example5/example5.2/: Readme.md  config_ex5_step3.yaml  manual_replacements.txt
docs/examples/non-enzymatic/example1-add-Glucosepane/: README.md  geometry+topology_gen.yaml
docs/examples/non-enzymatic/example2-add-Glucosepane+replace-crosslinks/: README.md  enzymatic_seq.yaml  geometry_gen_with_replace.yaml  non-enzymatic_seq.yaml
src/colbuilder/: colbuilder.py
src/colbuilder/chimera_scripts/: generate_copies.py  swapaa.py
src/colbuilder/core/geometry/: chimera.py  connect.py  crosslink.py  crosslink_mixer.py  crystal_builder.py  geometry_replacer.py  main_geometry.py  mix.py  optimize.py  system.py  unpaired_crosslinks.py
src/colbuilder/core/sequence/: .optimize_crosslinks.py.swp  main_sequence.py  optimize_crosslinks.py  sequence_generator.py
src/colbuilder/core/topology/: amber.py  crosslink.py  itp.py  main_topology.py  martini.py
src/colbuilder/core/utils/: config.py  crosslink_detector.py  crosslinks.py  data_structures.py  (+2 more)
(+72 files in other folders)
