[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Colbuilder"
version = "2.0.0"
description = "Collagen fibrils from amino acid sequences"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "MPIP-Grater Group", email = "matthias.brosz@h-its.org"},
]
keywords = ["collagen", "molecular", "simulation", "bioinformatics"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: UNIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # <2 keeps the numpy 1.x ABI (vermouth 0.9.1); >=1.25 lets pip pick a wheel
    # that exists for the running Python (e.g. 1.26 on 3.12, where 1.25 has none).
    "numpy>=1.25,<2",
    "vermouth==0.9.1",
    "pandas==2.2.2",
    "biopython==1.84",
    "scikit-learn",
    "PyYAML",
    "pydantic>=2.0",
    "tqdm",
    "colorama>=0.4.4",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
colbuilder = "colbuilder.colbuilder:main"
pdb2fasta = "colbuilder.utils.pdb2fasta:main"

[project.urls]
Homepage = "https://github.com/graeter-group/colbuilder"
Repository = "https://github.com/graeter-group/colbuilder"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colbuilder = [
    "data/**/*",
    "data/*",
]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "docs/source/conf.py", "old", "build", "dist"]

[tool.mypy]
ignore_missing_imports = true